@@ -22,6 +22,7 @@ Hbase Change Log
    HBASE-589   Remove references to deprecated methods in Hadoop once
                hadoop-0.17.0 is released
    HBASE-638   Purge \r from src
+   HBASE-644   DroppedSnapshotException but RegionServer doesn't restart
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
